--- a/Lab1/udemy/a.html
+++ b/Lab1/udemy/a.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p><strong>This text should be bold.</strong></p>
+<head>
+    <meta charset="utf-8">
+    <title>udemy</title>
+    <style>
 
-    <p><em>And this text should have emphasis (italics).</em></p>
-  </body>
-</html>
+    </style>
+</head>
+<body>
+
+<button>Button</button>
+<ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+</ul>
+
+
+
+
+
+
+</body>
