--- a/Lab1/w3school/c.html
+++ b/Lab1/w3school/c.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <p><b>This text is bold</b></p>
-    <p><i>This text is italic</i></p>
-    <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
+<body>
 
-    <b>This text is bold</b>
-    <strong>This text is important!</strong>
-    <i>This text is italic</i>
-    <em>This text is emphasized</em>
-    <small>This is some smaller text.</small>
-    <p>Do not forget to buy <mark>milk</mark> today.</p>
-    <p>My favorite color is <del>blue</del> red.</p>
-    <p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
-    <p>This is <sub>subscripted</sub> text.</p>
-    <p>This is <sup>superscripted</sup> text.</p>
-  </body>
+<img src="img_typo.jpg" alt="Girl with a jacket">
+
+<p>If we try to display an image that does not exist, the value of the alt attribute will be displayed instead. </p>
+
+</body>
 </html>
