--- a/Lab1/w3school/d.html
+++ b/Lab1/w3school/d.html
@@ -1,63 +1,17 @@
-<h1 style="color: blue">A Blue Heading</h1>
-
-<p style="color: red">A red paragraph.</p>
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        background-color: powderblue;
-      }
-      h1 {
-        color: blue;
-      }
-      p {
-        color: red;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph.</p>
-  </body>
+<body>
+
+<h1>This is heading 1</h1>
+<p>This is some text.</p>
+<hr>
+
+<h2>This is heading 2</h2>
+<p>This is some other text.</p>
+<hr>
+
+<h2>This is heading 2</h2>
+<p>This is some other text.</p>
+
+</body>
 </html>
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph.</p>
-  </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      h1 {
-        color: blue;
-        font-family: verdana;
-        font-size: 300%;
-      }
-      p {
-        color: red;
-        font-family: courier;
-        font-size: 160%;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph.</p>
-  </body>
-</html>
-
-<link rel="stylesheet" href="https://www.w3schools.com/html/styles.css" />
-
-<link rel="stylesheet" href="/html/styles.css" />
-
-<link rel="stylesheet" href="styles.css" />
