--- a/Lab3/Task2/main.html
+++ b/Lab3/Task2/main.html
@@ -8,7 +8,7 @@
     <body>
         <div class = "container">
             <div class = "do-app">
-                <h2>ToDo List <img src ="icon.png"></h2>
+                <h2>ToDo List </h2>
                 <div class="row">
                     <input type = "text" id = "input-goal" placeholder="Add a new goal">
                     <button onclick="addGoal()">Add</button>
@@ -17,6 +17,11 @@
                     <!-- <li class = "checked">Goal 1</li>
                     <li>Goal 2</li>
                     <li>Goal 3</li> -->
+                </ul>
+            </div>
+            <div class="checked-app">
+                <ul id="checked-list">
+
                 </ul>
             </div>
         </div>
